--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,9 @@
+@import "scss/common/variables";
+
 #app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: $background-color;
+  overflow-y: auto;
 }
