Animator prevent bug and InitialLogo Animation end

--- a/src/scss/common/_variables.scss
+++ b/src/scss/common/_variables.scss
@@ -1,9 +1,15 @@
 $background-color: #eeedef;
+$dividor-color: #bdbdbd;
+
+// Primary colors
 $dark-primary-color: #c2185b;
 $primary-color: #e91e63;
 $light-primary-color: #f8bbd0;
+$material-red-500: #f44336;
+
+// Secondary colors
 $secondary-color: #ffc107;
+
+// Text colors
 $primary-text-color: #212121;
 $secondary-text-color: #757575;
-$dividor-color: #bdbdbd;
-$material-red-500: #f44336;
