--- a/src/components/InitialLogo/InitialLogo.scss
+++ b/src/components/InitialLogo/InitialLogo.scss
@@ -2,8 +2,61 @@
   width: 100%;
   height: 100%;
   background-color: $primary-color;
-  // background-color: teal;
 
-  #logo-text-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  position: relative;
+  overflow: hidden;
+
+  #logo-text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    #sub-logo-text {
+      letter-spacing: 3px;
+      font-weight: 500;
+      font-size: 13px;
+      text-transform: uppercase;
+      color: #e0e0e0;
+    }
+
+    #logo-text {
+      margin: 8px 0;
+      letter-spacing: 1.5px;
+      font-weight: 700;
+      font-size: 32px;
+      color: white;
+    }
+
+    .dummy {
+      height: 15px;
+    }
+  }
+
+  .mask {
+    position: absolute;
+    background-color: $background-color;
+    width: 100%;
+    height: 100%;
+
+    &.top {
+      transform: translateY(-100%);
+    }
+
+    &.right {
+      transform: translateX(100%);
+    }
+
+    &.bottom {
+      transform: translateY(100%);
+    }
+
+    &.left {
+      transform: translateX(-100%);
+    }
   }
 }
