--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,7 +11,9 @@
 html {
   width: 100%;
   height: 100%;
-  font-family: Roboto, Nanumsquare, sans-serif;
+  // font-family: Roboto, "AppleSDGothicNeo", "Noto Sans KR", Nanumsquare,
+  //   sans-serif;
+  font-family: "AppleSDGothicNeo", "Noto Sans KR", Roboto, sans-serif;
   font-size: 14px;
   font-weight: normal;
   touch-action: none;
