--- a/src/components/InitialLogo/InitialLogo.scss
+++ b/src/components/InitialLogo/InitialLogo.scss
@@ -48,7 +48,7 @@
     }
 
     &.right {
-      transform: translateX(100%);
+      transform: translate(100%);
     }
 
     &.bottom {
@@ -56,7 +56,7 @@
     }
 
     &.left {
-      transform: translateX(-100%);
+      transform: translate(-100%);
     }
   }
 }
