--- a/src/components/InitialLogo/InitialLogo.scss
+++ b/src/components/InitialLogo/InitialLogo.scss
@@ -39,6 +39,9 @@
 
   .mask {
     position: absolute;
+    top: 0;
+    left: 0;
+
     background-color: $background-color;
     width: 100%;
     height: 100%;
