--- a/src/components/Cards/HeadInfoCard/HeadInfoCard.scss
+++ b/src/components/Cards/HeadInfoCard/HeadInfoCard.scss
@@ -4,6 +4,7 @@
   justify-content: center;
   background-color: $primary-color;
   padding: 0 20px;
+  border-radius: 3px;
 
   .title-text {
     letter-spacing: 0.5px;
