--- a/src/components/Cards/HeadInfoCard/HeadInfoCard.scss
+++ b/src/components/Cards/HeadInfoCard/HeadInfoCard.scss
@@ -17,6 +17,7 @@
 
   .sub-title-text {
     font-size: 11px;
+    letter-spacing: 0.3px;
     color: rgba(255, 255, 255, 0.95);
     opacity: 0;
   }
