--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,4 @@
-@import "lib/shadow";
+// @import "lib/shadow";
 
 * {
   margin: 0;
@@ -11,8 +11,6 @@
 html {
   width: 100%;
   height: 100%;
-  // font-family: Roboto, "AppleSDGothicNeo", "Noto Sans KR", Nanumsquare,
-  //   sans-serif;
   font-family: "AppleSDGothicNeo", "Noto Sans KR", Roboto, sans-serif;
   font-size: 14px;
   font-weight: normal;
