--- a/src/components/InitialLogo/InitialLogo.scss
+++ b/src/components/InitialLogo/InitialLogo.scss
@@ -17,15 +17,15 @@
     justify-content: center;
 
     #sub-logo-text {
-      letter-spacing: 3px;
+      letter-spacing: 2.5px;
       font-weight: 500;
-      font-size: 13px;
+      font-size: 11px;
       text-transform: uppercase;
-      color: #e0e0e0;
+      color: #f0f0f0;
     }
 
     #logo-text {
-      margin: 8px 0;
+      margin: 10px 0;
       letter-spacing: 1.5px;
       font-weight: 700;
       font-size: 32px;
