--- a/src/components/Cards/InfoCard/InfoCard.scss
+++ b/src/components/Cards/InfoCard/InfoCard.scss
@@ -2,8 +2,46 @@
   position: absolute;
   top: 50%;
   transform: translate3d(0, -50%, 0);
+  border-radius: 4px;
 
   width: 100%;
   height: 135px;
+  min-height: 135px;
+  padding: 25px;
   background-color: white;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+
+  .card-title-container {
+    transition: 0.35s cubic-bezier(0.4, 0, 0.2, 1);
+    height: 35px;
+    margin-bottom: 15px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    .title {
+      color: $primary-color;
+      font-weight: 900;
+      font-size: 14px;
+      margin-bottom: 3px;
+    }
+
+    .sub-title {
+      color: $secondary-text-color;
+      font-size: 10px;
+      letter-spacing: 0.3px;
+    }
+
+    &.hidden {
+      transition: 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+      height: 0;
+      margin-bottom: 0;
+      opacity: 0;
+    }
+  }
 }
