--- a/src/components/Cards/InfoCard/InfoCard.scss
+++ b/src/components/Cards/InfoCard/InfoCard.scss
@@ -17,31 +17,43 @@
 
   .card-title-container {
     transition: 0.35s cubic-bezier(0.4, 0, 0.2, 1);
-    height: 35px;
     margin-bottom: 15px;
+    height: 35px;
 
     display: flex;
     flex-direction: column;
     justify-content: center;
 
     .title {
+      transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
       color: $primary-color;
       font-weight: 900;
       font-size: 14px;
       margin-bottom: 3px;
+
+      &.hidden {
+        transition: 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+        transition-delay: 0.1s;
+        margin-bottom: 0px;
+        opacity: 0;
+      }
     }
 
     .sub-title {
+      transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
       color: $secondary-text-color;
       font-size: 10px;
       letter-spacing: 0.3px;
+
+      &.hidden {
+        transition: 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+        opacity: 0;
+      }
     }
 
     &.hidden {
-      transition: 0.25s cubic-bezier(0.4, 0, 0.2, 1);
       height: 0;
       margin-bottom: 0;
-      opacity: 0;
     }
   }
 }
