--- a/src/components/Cards/InfoCard/InfoCard.scss
+++ b/src/components/Cards/InfoCard/InfoCard.scss
@@ -7,7 +7,7 @@
   width: 100%;
   height: 135px;
   min-height: 135px;
-  padding: 25px;
+  padding: 20px 25px;
   background-color: white;
 
   display: flex;
