--- a/src/components/Inputs/TagInput/TagInput.scss
+++ b/src/components/Inputs/TagInput/TagInput.scss
@@ -15,32 +15,61 @@
     padding-right: 5px;
     padding-top: 8px;
     padding-bottom: 3px;
+
+    .tag-input-wrapper {
+      width: auto;
+      height: 22px;
+
+      flex: 1 1 50px;
+      display: flex;
+      justify-content: left;
+      align-items: center;
+      margin-bottom: 7px;
+
+      .tag-input {
+        border: 0;
+        width: 100%;
+        height: 100%;
+        background-color: inherit;
+        color: black;
+        padding-right: 5px;
+
+        &:-ms-input-placeholder,
+        &:-moz-placeholder,
+        &::-webkit-input-placeholder,
+        &::-moz-placeholder {
+          font-size: 13px;
+        }
+      }
+    }
   }
 
-  .tag-input-wrapper {
-    width: auto;
-    height: 22px;
+  .warn-container {
+    height: 20px;
+    margin-top: 8px;
+    opacity: 1;
 
-    flex: 1 1 60px;
     display: flex;
-    justify-content: left;
     align-items: center;
-    margin-bottom: 7px;
 
-    .tag-input {
-      border: 0;
-      width: 100%;
-      height: 100%;
-      background-color: inherit;
-      color: black;
-      padding-right: 5px;
+    color: $dark-primary-color;
+    transition: 0.15s cubic-bezier(0.4, 0, 0.2, 1);
 
-      &:-ms-input-placeholder,
-      &:-moz-placeholder,
-      &::-webkit-input-placeholder,
-      &::-moz-placeholder {
-        font-size: 13px;
-      }
+    i {
+      margin-right: 5px;
+      font-size: 13px;
+    }
+
+    .warn-text {
+      font-size: 11px;
+      letter-spacing: 0.3px;
+      font-weight: 500;
+    }
+
+    &.hidden {
+      height: 0;
+      margin-top: 0;
+      opacity: 0;
     }
   }
 }
