Mask Animation End + Animator from, to changes

--- a/src/components/Cards/InfoCard/InfoCard.scss
+++ b/src/components/Cards/InfoCard/InfoCard.scss
@@ -56,4 +56,17 @@
       margin-bottom: 0;
     }
   }
+
+  .mask {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: inherit;
+    border-radius: 4px;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 10000;
+  }
 }
