--- a/src/components/Cards/HeadInfoCard/HeadInfoCard.scss
+++ b/src/components/Cards/HeadInfoCard/HeadInfoCard.scss
@@ -1,9 +1,60 @@
+@mixin result-profile-mixin {
+  .result-profile-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+
+    font-size: 12px;
+    color: black;
+    background-color: white;
+    padding: 15px;
+
+    i {
+      cursor: pointer;
+      font-size: 14px;
+      color: $secondary-text-color;
+
+      opacity: 0;
+    }
+
+    .info-name-container {
+      width: 100%;
+
+      display: flex;
+      flex-direction: column;
+      margin-left: 15px;
+
+      .info-name {
+        font-size: 16px;
+        font-weight: 900;
+        margin-bottom: 3px;
+        color: $primary-color;
+
+        opacity: 0;
+      }
+
+      .info-remember {
+        font-size: 11px;
+        color: $secondary-text-color;
+        letter-spacing: 0.3px;
+
+        opacity: 0;
+      }
+    }
+
+    .info-tag-container {
+    }
+  }
+}
+
 .info-card.head {
   display: flex;
   flex-direction: column;
   justify-content: center;
   background-color: $primary-color;
   padding: 0 25px;
+  overflow: hidden;
 
   .title-text {
     letter-spacing: 0.5px;
@@ -20,4 +71,29 @@
     color: rgba(255, 255, 255, 0.95);
     opacity: 0;
   }
+
+  .dark-mask {
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-radius: 50%;
+    background-color: $dark-primary-color;
+  }
+
+  .sub-mask {
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-radius: 50%;
+    background-color: white;
+    overflow: hidden;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @include result-profile-mixin();
+  }
+
+  @include result-profile-mixin();
 }
