--- a/src/components/Inputs/TagInput/TagInput.scss
+++ b/src/components/Inputs/TagInput/TagInput.scss
@@ -16,6 +16,8 @@
     padding-top: 8px;
     padding-bottom: 3px;
 
+    z-index: 100;
+
     .tag-input-wrapper {
       width: auto;
       height: 22px;
@@ -53,7 +55,10 @@
     align-items: center;
 
     color: $dark-primary-color;
-    transition: 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+    transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1),
+      opacity 0.2s cubic-bezier(0, 0, 0.2, 1) 0.1s;
+
+    z-index: 10;
 
     i {
       margin-right: 5px;
@@ -67,6 +72,9 @@
     }
 
     &.hidden {
+      transition: 0.15s cubic-bezier(0.4, 0, 0.2, 1),
+        opacity 0.1s cubic-bezier(0, 0, 0.2, 1);
+
       height: 0;
       margin-top: 0;
       opacity: 0;
