--- a/src/components/Tag/TagBlock/TagBlock.scss
+++ b/src/components/Tag/TagBlock/TagBlock.scss
@@ -4,12 +4,17 @@
   align-items: center;
   margin-right: 5px;
   margin-bottom: 5px;
-  padding: 3px 10px;
+  padding: 0 10px;
   border-radius: 3px;
   line-break: anywhere;
   font-size: 13px;
   height: 22px;
   background-color: teal;
+
+  .tag-text {
+    white-space: nowrap;
+    width: 100%;
+  }
 
   i {
     cursor: pointer;
