--- a/src/components/Cards/HeadInfoCard/HeadInfoCard.scss
+++ b/src/components/Cards/HeadInfoCard/HeadInfoCard.scss
@@ -2,18 +2,33 @@
   .result-profile-container {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
 
     font-size: 12px;
     color: black;
     background-color: white;
     padding: 15px;
 
+    .i-mask {
+      position: absolute;
+      top: 0;
+      left: 0;
+      transform: translate3d(-50%, -50%, 0);
+
+      background-color: $primary-color;
+      border-radius: 50%;
+
+      width: 0;
+      height: 0;
+    }
+
     i {
       cursor: pointer;
       font-size: 14px;
       color: $secondary-text-color;
+      align-self: flex-start;
+
+      // visibility: hidden;
 
       opacity: 0;
     }
@@ -23,10 +38,11 @@
 
       display: flex;
       flex-direction: column;
-      margin-left: 15px;
+      align-items: center;
+      margin: 25px 0;
 
       .info-name {
-        font-size: 16px;
+        font-size: 18px;
         font-weight: 900;
         margin-bottom: 3px;
         color: $primary-color;
@@ -44,6 +60,27 @@
     }
 
     .info-tag-container {
+      opacity: 0;
+      width: 100%;
+
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .tag-block-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+
+        max-width: 100%;
+      }
+
+      .info-tag-text {
+        margin-top: 5px;
+        display: block;
+        color: $primary-text-color;
+      }
     }
   }
 }
