--- a/src/components/Cards/HeadInfoCard/HeadInfoCard.scss
+++ b/src/components/Cards/HeadInfoCard/HeadInfoCard.scss
@@ -3,11 +3,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex-wrap: wrap;
 
     font-size: 12px;
     color: black;
     background-color: white;
-    padding: 15px;
+    // padding: 15px;
 
     .i-mask {
       position: absolute;
@@ -24,13 +25,21 @@
       z-index: 10000;
     }
 
-    i {
-      cursor: pointer;
-      font-size: 14px;
-      color: $secondary-text-color;
-      align-self: flex-start;
+    .back-button-wrapper {
+      width: 30px;
+      height: 30px;
 
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      align-self: flex-start;
       opacity: 0;
+
+      i {
+        cursor: pointer;
+        font-size: 14px;
+        color: $secondary-text-color;
+      }
     }
 
     .info-name-container {
