--- a/src/components/Cards/HeadInfoCard/HeadInfoCard.scss
+++ b/src/components/Cards/HeadInfoCard/HeadInfoCard.scss
@@ -1,108 +1,4 @@
-@mixin result-profile-mixin {
-  .result-profile-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;
-
-    font-size: 12px;
-    color: black;
-    background-color: white;
-    // padding: 15px;
-
-    .i-mask {
-      position: absolute;
-      top: 0;
-      left: 0;
-      transform: translate3d(-50%, -50%, 0);
-
-      background-color: $primary-color;
-      border-radius: 50%;
-
-      width: 0;
-      height: 0;
-
-      z-index: 10000;
-    }
-
-    .back-button-wrapper {
-      width: 30px;
-      height: 30px;
-
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      align-self: flex-start;
-      opacity: 0;
-      cursor: pointer;
-
-      i {
-        font-size: 14px;
-        color: $secondary-text-color;
-      }
-    }
-
-    .info-name-container {
-      width: 100%;
-
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin: 25px 0;
-
-      .info-name {
-        font-size: 18px;
-        font-weight: 900;
-        margin-bottom: 5px;
-        color: $primary-color;
-
-        opacity: 0;
-      }
-
-      .info-remember {
-        font-size: 12px;
-        color: $secondary-text-color;
-        letter-spacing: 0.3px;
-
-        opacity: 0;
-      }
-    }
-
-    .dividor {
-      width: calc(100% - 40px);
-      height: 1px;
-      background-color: $dividor-color;
-      margin-bottom: 25px;
-      opacity: 0;
-    }
-
-    .info-tag-container {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-
-      .tag-block-container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-        max-width: 100%;
-
-        opacity: 0;
-      }
-
-      .info-tag-text {
-        font-size: 12px;
-        color: $primary-text-color;
-        margin-top: 5px;
-        font-weight: 500;
-
-        opacity: 0;
-      }
-    }
-  }
-}
+@import "./ResultProfile.scss";
 
 .info-card.head {
   display: flex;
