--- a/src/components/Cards/HeadInfoCard/ResultProfile.scss
+++ b/src/components/Cards/HeadInfoCard/ResultProfile.scss
@@ -11,7 +11,7 @@
     color: black;
     background-color: white;
 
-    padding-left: 30px;
+    padding: 0 30px;
 
     .i-mask {
       position: absolute;
@@ -64,22 +64,11 @@
         justify-content: center;
         align-items: center;
 
-        border-radius: 50%;
-
-        button {
-          all: unset;
+        .circle-button {
           width: 0;
           height: 0;
 
           background-color: $secondary-color;
-          border-radius: 50%;
-
-          display: flex;
-          justify-content: center;
-          align-items: center;
-
-          overflow: hidden;
-          font-size: 16px;
 
           i {
             color: white;
