--- a/src/components/MainContainer/MainContainer.scss
+++ b/src/components/MainContainer/MainContainer.scss
@@ -8,5 +8,18 @@
     width: 300px;
     height: 100%;
     margin: 0 auto;
+
+    & > .circle-button {
+      // 사지방에서 테스팅 해야함.
+      position: sticky;
+      bottom: 2em;
+      margin-top: 2em;
+
+      // sticky 되먼 이거로 하고싶음... 그게 아니면 평소에는 중간에 놓기
+      // align-self: flex-end;
+      align-self: center;
+
+      background-color: $secondary-color;
+    }
   }
 }
