fixed ripple issue

--- a/src/components/Cards/HeadInfoCard/ResultProfile.scss
+++ b/src/components/Cards/HeadInfoCard/ResultProfile.scss
@@ -65,10 +65,12 @@
         align-items: center;
 
         .circle-button {
+          position: relative;
           width: 0;
           height: 0;
 
           background-color: $secondary-color;
+          overflow: hidden;
 
           i {
             color: white;
