--- a/src/components/Buttons/CircleButton/CircleButton.scss
+++ b/src/components/Buttons/CircleButton/CircleButton.scss
@@ -9,10 +9,12 @@
   border-radius: 50%;
   cursor: pointer;
   z-index: 1000;
+  visibility: visible;
 
   transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 
   &.hidden {
+    visibility: hidden;
     transition: 0.25s cubic-bezier(0, 0, 0.2, 1);
     opacity: 0;
   }
