--- a/src/components/InitialLogo/InitialLogo.scss
+++ b/src/components/InitialLogo/InitialLogo.scss
@@ -17,16 +17,17 @@
     justify-content: center;
 
     #sub-logo-text {
-      letter-spacing: 2px;
-      font-weight: 500;
-      font-size: 10px;
+      letter-spacing: 2.5px;
+      font-size: 12px;
       text-transform: uppercase;
-      color: #f0f0f0;
+      color: white;
+      font-weight: 300;
+      height: 15px;
     }
 
     #logo-text {
-      margin: 10px 0;
-      letter-spacing: 1.5px;
+      margin: 12px 0;
+      letter-spacing: 2px;
       font-weight: 700;
       font-size: 32px;
       color: white;
