--- a/src/components/Tag/TagBlock/TagBlock.scss
+++ b/src/components/Tag/TagBlock/TagBlock.scss
@@ -4,11 +4,11 @@
   align-items: center;
   margin-right: 5px;
   margin-bottom: 5px;
-  padding: 0 10px;
+  padding: 3px 10px;
   border-radius: 3px;
   line-break: anywhere;
-  font-size: 13px;
-  height: 22px;
+  font-size: 14px;
+  // height: 24px;
   background-color: teal;
 
   .tag-text {
