--- a/src/scss/common/_variables.scss
+++ b/src/scss/common/_variables.scss
@@ -13,3 +13,6 @@ $secondary-color: #ffc107;
 // Text colors
 $primary-text-color: #212121;
 $secondary-text-color: #757575;
+
+// Sizes
+$origin-info-card-height: 135px;
