--- a/src/components/Cards/HeadInfoCard/HeadInfoCard.scss
+++ b/src/components/Cards/HeadInfoCard/HeadInfoCard.scss
@@ -10,17 +10,17 @@
 
   .title-text {
     letter-spacing: 0.5px;
-    font-weight: bold;
+    font-weight: 500;
     font-size: 20px;
     color: white;
     opacity: 0;
-    margin-bottom: 6px;
+    margin-bottom: 5px;
   }
 
   .sub-title-text {
-    font-size: 11px;
-    letter-spacing: 0.3px;
-    color: rgba(255, 255, 255, 0.95);
+    font-weight: 300;
+    font-size: 12px;
+    color: #dadada;
     opacity: 0;
   }
 
