--- a/src/components/Cards/InfoCard/InfoCard.scss
+++ b/src/components/Cards/InfoCard/InfoCard.scss
@@ -5,8 +5,8 @@
   border-radius: 4px;
 
   width: 100%;
-  height: 135px;
-  min-height: 135px;
+  height: $origin-info-card-height;
+  min-height: $origin-info-card-height;
   padding: 20px 25px;
   background-color: white;
 
@@ -27,8 +27,8 @@
     .title {
       transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
       color: $primary-color;
-      font-weight: 900;
-      font-size: 14px;
+      font-weight: 700;
+      font-size: 15px;
       margin-bottom: 3px;
 
       &.hidden {
@@ -42,7 +42,7 @@
     .sub-title {
       transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
       color: $secondary-text-color;
-      font-size: 10px;
+      font-size: 12px;
       letter-spacing: 0.3px;
 
       &.hidden {
