--- a/src/components/Cards/HeadInfoCard/HeadInfoCard.scss
+++ b/src/components/Cards/HeadInfoCard/HeadInfoCard.scss
@@ -14,14 +14,15 @@
     font-size: 20px;
     color: white;
     opacity: 0;
-    margin-bottom: 5px;
+    margin-bottom: 4px;
   }
 
   .sub-title-text {
     font-weight: 300;
     font-size: 12px;
-    color: #dadada;
+    color: #f0f0f0;
     opacity: 0;
+    letter-spacing: 0.2px;
   }
 
   .dark-mask {
