--- a/src/components/Cards/HeadInfoCard/ResultProfile.scss
+++ b/src/components/Cards/HeadInfoCard/ResultProfile.scss
@@ -12,6 +12,7 @@
     background-color: white;
 
     padding: 0 30px;
+    border-radius: 4px;
 
     .i-mask {
       position: absolute;
@@ -125,6 +126,29 @@
         margin-top: 5px;
 
         opacity: 0;
+      }
+    }
+
+    .flip-block {
+      position: relative;
+      transform-style: preserve-3d;
+
+      .front,
+      .back {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        backface-visibility: hidden;
+      }
+
+      .front {
+        background-color: white;
+      }
+
+      .back {
+        background-color: $background-color;
+        // background-color: teal;
+        transform: rotate3d(1, 0, 0, 180deg);
       }
     }
   }
