commit for save

--- a/src/components/Cards/HeadInfoCard/ResultProfile.scss
+++ b/src/components/Cards/HeadInfoCard/ResultProfile.scss
@@ -70,7 +70,7 @@
           width: 0;
           height: 0;
 
-          background-color: $secondary-color;
+          background-color: $primary-color;
           overflow: hidden;
 
           i {
