--- a/src/components/Cards/InfoCard/InfoCard.scss
+++ b/src/components/Cards/InfoCard/InfoCard.scss
@@ -26,7 +26,8 @@
 
     .title {
       transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-      color: $primary-color;
+      // color: $primary-color;
+      color: #213a72;
       font-weight: 700;
       font-size: 15px;
       margin-bottom: 3px;
