--- a/src/components/Inputs/TagInput/TagInput.scss
+++ b/src/components/Inputs/TagInput/TagInput.scss
@@ -56,7 +56,7 @@
     display: flex;
     align-items: center;
 
-    color: $dark-primary-color;
+    color: $material-red-500;
     transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1),
       opacity 0.2s cubic-bezier(0, 0, 0.2, 1) 0.1s;
 
