--- a/src/components/MainContainer/MainContainer.scss
+++ b/src/components/MainContainer/MainContainer.scss
@@ -1,37 +1,88 @@
 #main-container {
-  width: 420px;
-  height: 100%;
-  margin: 0 auto;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding-top: 60px;
+  padding-left: 20px;
 
-  .card-container {
-    position: relative;
-
+  .cover-container {
     width: 100%;
-    max-width: 300px;
+    padding: 40px 0;
 
-    height: 100%;
-    margin: 0 auto;
+    .title-container {
+      display: flex;
+      flex-direction: column;
 
-    & > .circle-button {
-      position: fixed;
-      bottom: 2em;
-      right: 2em;
+      .title-text {
+        font-size: 26px;
+        line-height: 36px;
+        font-weight: 500;
+      }
 
-      background-color: $secondary-color;
+      .sub-title-text {
+        font-size: 14px;
+        margin-top: 10px;
+        color: $secondary-text-color;
+      }
+    }
+  }
+
+  .main-card-container {
+    .post {
+      // background-color: white;
+      // width: 200px;
     }
   }
 }
 
-@media screen and (max-width: 40em) {
+@media screen and (min-width: 500px) {
   #main-container {
-    width: 100%;
-    padding: 0 5px;
+    flex-direction: row;
+    padding-left: 40px;
 
-    .card-container {
-      & > .circle-button {
-        bottom: 1em;
-        right: 1em;
+    .cover-container {
+      // position: fixed;
+      // top: 60px;
+      // left: 40px;
+
+      width: auto;
+      padding: 60px 0;
+      margin-right: 40px;
+
+      .title-container {
+        .title-text {
+          font-size: 32px;
+          line-height: 42px;
+        }
+
+        .sub-title-text {
+          margin-top: 15px;
+        }
       }
     }
+  }
+}
+
+@media screen and (min-width: 769px) {
+  #main-container {
+    padding-left: 80px;
+
+    .cover-container {
+      // padding: 100px 0;
+      // margin-right: 80px;
+
+      .title-container {
+        .title-text {
+          font-size: 38px;
+          line-height: 48px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  #main-container {
+    padding: 100px 150px;
   }
 }
