--- a/src/components/Inputs/TextInput/TextInput.scss
+++ b/src/components/Inputs/TextInput/TextInput.scss
@@ -55,13 +55,15 @@
     opacity: 1;
 
     display: flex;
-    align-items: center;
 
-    color: $dark-primary-color;
+    color: $material-red-500;
     transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1),
       opacity 0.2s cubic-bezier(0, 0, 0.2, 1) 0.1s;
 
-    i {
+    .icon-container {
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
       margin-right: 5px;
       font-size: 13px;
     }
