--- a/src/scss/common/_variables.scss
+++ b/src/scss/common/_variables.scss
@@ -3,20 +3,13 @@ $dividor-color: #bdbdbd;
 
 // Primary colors
 $dark-primary-color: black;
-// $primary-color: #e91e63;
-// $light-primary-color: #f8bbd0;
-$primary-color: #212121;
-$light-primary-color: #424242;
+$primary-color: #48d1cc;
+$dark-primary-color: #1c9793;
 $material-red-500: #f44336;
 
-// Secondary colors
-// $secondary-color: #ffc107;
-$secondary-color: #2196f3;
-
 // Text colors
-$primary-text-color: #212121;
+$primary-text-color: #48d1cc;
 $secondary-text-color: #757575;
-
 
 // Sizes
 $origin-info-card-height: 135px;
